--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 <!-- 
     <title>React App</title> -->
-    <title>Pahle Dukan Phir Makaan Yojana (PDPMY) - Delhi Shopping Complex</title>
-<meta name="title" content="Pahle Dukan Phir Makaan Yojana (PDPMY) - Delhi Shopping Complex">
-<meta name="description" content="Pahle Dukan Phir Makaan Yojana (PDPMY) - Delhi Shopping Complex">
+    <title>Delhi Mall Complex - Kirti Nagar Delhi - Invest in Shops</title>
+<meta name="title" content="Delhi Mall Complex - Kirti Nagar Delhi - Invest in Shops">
+<meta name="description" content="Delhi Mall Complex - Kirti Nagar Delhi - Invest in Shops">
 <meta name="author" content="Shopping Complex Delhi">
 <meta name="referrer" content="origin">
 <meta name="robots" content="index, follow">
