--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 <!-- 
     <title>React App</title> -->
-    <title>Delhi Mall Complex - Kirti Nagar Delhi - Invest in Shops</title>
+    <title>Delhi Mall Complex - Patel Nagar Delhi - Invest in Shops</title>
 <meta name="title" content="Delhi Mall Complex - Kirti Nagar Delhi - Invest in Shops">
 <meta name="description" content="Delhi Mall Complex - Kirti Nagar Delhi - Invest in Shops">
 <meta name="author" content="Shopping Complex Delhi">
@@ -21,17 +21,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <body style="overflow-x: hidden;">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript></noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+   
   </body>
 </html>
