--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-   
-  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-<!-- 
-    <title>React App</title> -->
     <title>Delhi Mall Complex - Patel Nagar Delhi - Invest in Shops</title>
-<meta name="title" content="Delhi Mall Complex - Kirti Nagar Delhi - Invest in Shops">
+<meta name="title" content="Delhi Mall Complex patel Nagar, Delhi is the best opportunity for investment in Commercial Project. Raheja Developers offers Shops in Delhi Mall Complex.">
 <meta name="description" content="Delhi Mall Complex - Kirti Nagar Delhi - Invest in Shops">
 <meta name="author" content="Shopping Complex Delhi">
+<meta name="keywords" content="Delhi Mall Complex, the delhi mall, the delhi mall compex, Delhi Mall, Raheja delhi Mall Patel Nagar, Shops in New Delhi, Mall Delhi">
+
 <meta name="referrer" content="origin">
 <meta name="robots" content="index, follow">
 <link rel="canonical" href="https://www.shoppingcomplexdelhi.com/">
@@ -23,6 +20,6 @@
   <body style="overflow-x: hidden;">
     <noscript></noscript>
     <div id="root"></div>
-   
   </body>
 </html>
+ 
