--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Delhi Mall Complex - Patel Nagar Delhi - Invest in Shops</title>
-<meta name="title" content="Delhi Mall Complex patel Nagar, Delhi is the best opportunity for investment in Commercial Project. Raheja Developers offers Shops in Delhi Mall Complex.">
-<meta name="description" content="Delhi Mall Complex - Kirti Nagar Delhi - Invest in Shops">
+<meta name="title" content="Delhi Mall Complex - Patel Nagar Delhi - Invest in Shops.">
+<meta name="description" content="Delhi Mall Complex patel Nagar, Delhi is the best opportunity for investment in Commercial Project. Raheja Developers offers Shops in Delhi Mall Complex">
 <meta name="author" content="Shopping Complex Delhi">
-<meta name="keywords" content="Delhi Mall Complex, the delhi mall, the delhi mall compex, Delhi Mall, Raheja delhi Mall Patel Nagar, Shops in New Delhi, Mall Delhi">
+<meta name="keywords" content="DELHI MALL REGISTRATION,Delhi Mall Complex, the delhi mall, the delhi mall compex, Delhi Mall, Raheja delhi Mall Patel Nagar, Shops in New Delhi, Mall Delhi">
 
 <meta name="referrer" content="origin">
 <meta name="robots" content="index, follow">
